Replace developer error replies with exceptions